[build-system]
requires = [
  "setuptools >= 40.9.0",
  "versioneer[toml]==0.26",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "openff-nagl"
description = "A playground for applying graph convolutional networks to molecules."
license = { file = "LICENSE" }
authors = [
    {name = "Lily Wang", email = "lily.wang@openforcefield.org"},
]
maintainers = [
    {name = "Lily Wang", email = "lily.wang@openforcefield.org"},
]
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-xdist>=2.5",
    "pytest-cov>=3.0",
]
doc = [
    "sphinx>=1.8",
    "openff-sphinx-theme @ git+https://github.com/openforcefield/openff-sphinx-theme.git@main",
]

[project.scripts]
openff-nagl = "openff.nagl.cli:cli"

# [project.urls]
# source = "https://github.com/openforcefield/openff-nagl"
# documentation = "https://openff-nagl.readthedocs.io"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "openff/nagl/tests",
]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "openff/nagl/_version.py"
versionfile_build = "openff/nagl/_version.py"
tag_prefix = "v"
parentdir_prefix = "openff-nagl-"