[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=77.0.3",
  "versioneer[toml]==0.29",
  "wheel",
]

[project]
name = "openff-nagl"
description = "A playground for applying graph convolutional networks to molecules."
readme = "README.md"
license = "MIT"
license-files = "LICENSE"
maintainers = [
  { name = "Lily Wang", email = "lily.wang@openforcefield.org" },
]
authors = [
  { name = "Lily Wang", email = "lily.wang@openforcefield.org" },
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]

optional-dependencies.doc = [
  "openff-sphinx-theme @ git+https://github.com/openforcefield/openff-sphinx-theme.git@main",
  "sphinx>=1.8",
]
optional-dependencies.test = [
  "pytest>=6",
  "pytest-cov>=3",
  "pytest-xdist>=2.5",
]
urls.documentation = "https://docs.openforcefield.org/projects/nagl/"
urls.source = "https://github.com/openforcefield/openff-nagl"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = [ 'openff.nagl*' ]
exclude = [ 'openff.nagl.tests.data*' ]

[tool.pytest.ini_options]
testpaths = [
  "openff/nagl/tests",
]

[tool.coverage.run]
omit = [
  "*/*/_tests/*",
  "openff/nagl/_version.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@overload",
]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "openff/nagl/_version.py"
versionfile_build = "openff/nagl/_version.py"
tag_prefix = "v"
parentdir_prefix = "openff-nagl-"
