# Helper file to handle all configs

[coverage:run]
# .coveragerc to control coverage.py and pytest-cov
omit =
    # Omit the tests
    */tests/*
    # Omit generated versioneer
    openff/nagl/_version.py

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 80


[yapf]
# YAPF, in .style.yapf files this shows up as "[style]" header
COLUMN_LIMIT = 80
INDENT_WIDTH = 4
USE_TABS = False

[flake8]
# Flake8, PyFlakes, etc
max-line-length = 80
exclude = versioneer.py

[versioneer]
# Automatic version numbering scheme
VCS = git
style = pep440
versionfile_source = openff/nagl/_version.py
versionfile_build = openff/nagl/_version.py
tag_prefix = v

[aliases]
test = pytest

[tool:pytest]
testpaths = openff/nagl/tests

[build_sphinx]
all-files = 1
source-dir = docs/
build-dir = docs/_build
warning-is-error = 1

[options]
packages = find_namespace:

[options.packages.find]
include = ["openff.*"]