# Helper file to handle all configs

[coverage:run]
# .coveragerc to control coverage.py and pytest-cov
omit =
    # Omit the tests
    */*/tests/*
    # Omit generated versioneer
    openff/nagl/_version.py

[coverage:report]
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 80

[flake8]
max-line-length = 100
ignore = E203,B028,W503
exclude = versioneer.py
per-file-ignores =
    openff/nagl/_base/__init__.py:F401
    openff/nagl/molecule/__init__.py:F401
    openff/nagl/toolkits/openff.py:E501
    openff/nagl/label/dataset.py:E731
    openff/nagl/tests/utils/test_resonance.py:E501
    openff/nagl/toolkits/openeye.py:E501
    openff/nagl/toolkits/rdkit.py:E501

[versioneer]
# Automatic version numbering scheme
VCS = git
style = pep440
versionfile_source = openff/nagl/_version.py
versionfile_build = openff/nagl/_version.py
tag_prefix = v

[aliases]
test = pytest

[tool:pytest]
testpaths = openff/nagl/tests

[build_sphinx]
all-files = 1
source-dir = docs/
build-dir = docs/_build
warning-is-error = 1

[options]
packages = find_namespace:

[options.packages.find]
include = ["openff.*"]
